--- a/airlines.html
+++ b/airlines.html
@@ -5,11 +5,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+    <link type="text/css" rel="stylesheet" href="airlines.css">
     <title>Document</title>
 </head>
 <body>
+<div class="row">
+    <div id="thetable" class="col-md-8">
 <h1>Liste des vols</h1>
 <table class="table">
     <thead>
@@ -23,11 +26,31 @@
         <th scope="col">Established</th>
     </tr>
     </thead>
-    <tbody>
+    <tbody id="table1">
 
     </tbody>
-</table>
 
+</table>
+    </div>
+    <div id="allbutton" class="col-md-4">
+        <h2>Etape 1 : </h2>
+        <button id="button1" class="btn btn-outline-primary">
+            Step 1
+        </button>
+        <h2>Etape 2 :</h2>
+        <button id="button2" class="btn btn-outline-success">
+            Step 2
+        </button>
+        <h2>Etape 3 :</h2>
+        <button id="button3" class="btn btn-outline-danger">
+            Step 3
+        </button>
+        <h2>Etape 4 :</h2>
+            <button id="button4" class="btn btn-outline-warning">
+                Step 4
+            </button>
+    </div>
+</div>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="airlines.js"></script>
